mdapipkg/objects/Recruiting_Settings__mdt/fields/Position_fieldset__c.field-meta.xml
<CustomField>
    <fullName>Position_fieldset__c</fullName>
    <label>Position fieldset</label>
    <length>50</length>
    <type>Text</type>
</CustomField>