mdapipkg/objects/Recruiting_Settings__mdt/fields/Position_filter_fieldset__c.field-meta.xml
<CustomField>
    <fullName>Position_filter_fieldset__c</fullName>
    <label>Position filter fieldset</label>
    <length>50</length>
    <type>Text</type>
</CustomField>