mdapipkg/objects/Recruiting_Settings__mdt/fields/Show_user_photo__c.field-meta.xml
<CustomField>
    <fullName>Show_user_photo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show user photo</label>
    <type>Checkbox</type>
</CustomField>